move ghost version to .env

--- a/.env.example
+++ b/.env.example
@@ -2,5 +2,8 @@ APP_URL=http://localhost:8080
 APP_PORT=8080
 APP_ENV=development/production
 
+# Please refer to https://registry.hub.docker.com/_/ghost/tags
+GHOST_VERSION=5.49-alpine
+
 DB_NAME=ghost
 DB_PASSWORD=secret
