--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -6,6 +6,8 @@ services:
     depends_on:
       ghost-db:
         condition: service_completed_successfully
+    networks:
+      - ghost-network
     ports:
       - "${APP_PORT}:2368"
     volumes:
@@ -25,8 +27,14 @@ services:
   ghost-db:
     image: mysql:8.0
     restart: always
+    networks:
+      - ghost-network
     volumes:
       - "./ghost-db:/var/lib/mysql"
     environment:
       MYSQL_DATABASE: ghost
       MYSQL_ROOT_PASSWORD: ${DB_PASSWORD}
+
+networks:
+  ghost-network:
+      driver: bridge
