--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -5,7 +5,7 @@ services:
     restart: always
     depends_on:
       ghost-db:
-        condition: service_completed_successfully
+        condition: service_healthy
     networks:
       - ghost-network
     ports:
