--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -5,7 +5,7 @@ services:
     restart: always
     depends_on:
       ghost-db:
-        condition: service_healthy
+        condition: service_started
     networks:
       - ghost-network
     ports:
@@ -31,6 +31,11 @@ services:
       - ghost-network
     volumes:
       - "./ghost-db:/var/lib/mysql"
+    healthcheck:
+      test: [ "CMD-SHELL", "exit | mysql -h localhost -P 3306 -u root -p$$MYSQL_ROOT_PASSWORD" ]
+      interval: 5s
+      timeout: 20s
+      retries: 30
     environment:
       MYSQL_DATABASE: ghost
       MYSQL_ROOT_PASSWORD: ${DB_PASSWORD}
