export config | refactor folder structure

--- a/.env.example
+++ b/.env.example
@@ -1,6 +1,6 @@
-APP_URL=http://localhost:8080
-APP_PORT=8080
-APP_ENV=development/production
+# no space, use lower-case and underscore only. container slug used for container naming (see README)
+CONTAINER_SLUG=ghost_blog
+CONTAINER_PORT=8080
 
 # Please refer to https://registry.hub.docker.com/_/ghost/tags
 GHOST_VERSION=5.49-alpine
